# mini-nanobot

./: .env.example  README.md  pyproject.toml
.claude/: settings.local.json
src/minibot/: __init__.py  agent.py  cli.py  llm.py  memory.py  providers.py  session.py  simple_chat.py  tool.py
src/minibot/Providers/: README.md  REQUIREMENTS.md  __init__.py  base.py  claude.py  deepseek.py  errors.py  openai.py  openai_compatible.py  registry.py
tests/: test_cli_and_package.py  test_llm.py  test_llm_legacy_and_provider_wrappers.py  test_memory_session_tool.py  test_providers.py
