[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minibot"
version = "0.1.0"
description = "A minimal ReAct-style chatbot with memory, tools, sessions, and a CLI."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "minibot" }
]
dependencies = []

[project.scripts]
minibot = "minibot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
