[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minibot"
version = "0.1.0"
description = "A minimal ReAct-style chatbot with memory, tools, sessions, and a CLI."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "minibot" }
]
dependencies = []

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[project.scripts]
minibot = "minibot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
